--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <input type="file" id="image"/>
     <button id="analyze" onClick="analyze()">Analyze</button>
     <div id="result"></div>
+    <canvas id="mycanvas"></canvas>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
